--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -757,7 +757,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="col-2" title="Available Size" style="display: none;height: 53px;" id="size_panel" >
+                                                <div class="col-2" title="Available Size" style="height: 53px;" id="size_panel" >
                                                     <div class="btn btn-sm btn-primary" id="available_size">
                                                     </div>
                                                 </div>
