--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -744,7 +744,7 @@
                                         <div class="col-9 ">
                                             <div class="row align-items-end justify-content-end gx-6">
 
-                                                <div class="col-2" id="show_left_days_div" style="display: block;height:4.2rem;">
+                                                <div class="col-2" id="show_left_days_div" style="display: none;height:4.2rem;">
                                                         <button type="button" disabled class="btn btn-sm btn-primary py-3" title="Days Left" style="height: 4.8rem;padding: 1rem;">
                                                         <span id="days_left"></span><br>Day Left
                                                         </button>
