--- a/chat/templates/chat/chat-js.html
+++ b/chat/templates/chat/chat-js.html
@@ -402,7 +402,7 @@ function setReceiver(username,email, id, user_img_url=null,img_url=null, full_na
             $('#offcanvas_profile_bio').closest('.list-group-item').hide();
         $('#offcanvas-dropdown').hide()
         $('#offcanvas_group_members').hide();
-
+        $('#show_left_days_div').hide();
         {# Hiding Call and Chat #}
         // $('#video_call_form').hide()
         // $('#audio_call_form').hide()
