--- a/chat/templates/chat/offcanvas.html
+++ b/chat/templates/chat/offcanvas.html
@@ -14,22 +14,7 @@
             </a>
 
             <ul class="dropdown-menu">
-{#                <li onclick="$('#video_call_form').submit()">#}
-{#                   <a href="#" class="dropdown-item d-flex align-items-center">#}
-{#                        Video Call #}
-{#                        <div class="icon ms-auto">#}
-{#                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-video"><polygon points="23 7 16 12 23 17 23 7"></polygon><rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect></svg>#}
-{#                        </div>#}
-{#                    </a>#}
-{#                </li>#}
-{#                <li onclick="$('#audio_call_form').submit()">#}
-{#                    <a href="#" class="dropdown-item d-flex align-items-center">#}
-{#                        Audio Call#}
-{#                        <div class="icon ms-auto">#}
-{#                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>#}
-{#                        </div>#}
-{#                    </a>#}
-{#                </li>#}
+
                 <li data-bs-toggle="modal" data-bs-target="#modal-group">
                     <a href="#" class="dropdown-item d-flex align-items-center">
                         Edit Group
@@ -83,6 +68,35 @@
                     <h4  id="offcanvas_profile_fullname"></h4>
                     <p  id="offcanvas_profile_username"></p>
                 </div>
+
+                <ul class="menu" style="list-style-type: none;">
+                            <li>
+                                                                <a class="dropdown-item d-flex align-items-center text-primary open-notebook" onclick="redirectNotebook()" href="#">
+                                                                    <span class="me-auto">Open Code Room&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                                                </a>
+                                                            </li>
+                            <li>
+                                                                <a class="dropdown-item d-flex align-items-center text-info" href="#" id="show_left_days_div" style="display:none">
+                                                                    <span class="me-auto">Validity : 98/100 Days Left&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                                                </a>
+                                                            </li>
+
+
+
+                                                            <li>
+                                                                <a class="dropdown-item d-flex align-items-center text-info" href="#" id="available_size">
+                                                                    <span class="me-auto">Storage: 0.000/0.0 GB&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                                                </a>
+                                                            </li>
+
+                                                            <li>
+                                                                <a class="dropdown-item d-flex align-items-center text-info" href="#" id="show-buy-plan-btn" disabled title="Buy new plan">
+                                                                    <span class="me-auto" title="Buy New Plan" data-bs-toggle="modal" data-bs-target="#more-storage">
+                                                        <span>Renew Plan</span>
+                                                        </span>
+                                                                </a>
+                                                            </li>
+                                                        </ul>
             </div>
         </div>
         <!-- Avatar -->
