--- a/chat/templates/chat/group-chat-js.html
+++ b/chat/templates/chat/group-chat-js.html
@@ -284,7 +284,7 @@
             }
         }
         // Only show add member option to admins
-        isCurrentUserAdmin ? $('#add-member-to-group').show():$('#add-member-to-group').hide()
+        {#isCurrentUserAdmin ? $('#add-member-to-group').show():$('#add-member-to-group').hide()#}
         $.each(data['member_list'], function(k,v){
             let userId = k;
             let groupId = data['group_id'];
