--- a/users/templates/users/user_register.html
+++ b/users/templates/users/user_register.html
@@ -189,7 +189,14 @@
                         <div class="field">
                             <label for="email">Email*</label>
                             <div class="control">
-                                <input type="email" id="email" class="input" name="email" required onkeyup="unlockNextBtn(event, this, 0, 'stepbtn0')" placeholder="Enter your email address">
+                                <input type="email" id="email" class="input" name="email" required onchange="unlockNextBtn(event, this, 0, 'stepbtn0')"  placeholder="Enter your email address">
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label for="email">Phone Number*</label>
+                            <div class="control">
+                                <input type="number" id="phone_number" class="input" name="phone_number" required onkeyup="unlockNextBtn(event, this, 0, 'stepbtn0')" placeholder="Enter your phone number">
                             </div>
                         </div>
 
