company plan updates

--- a/company/templates/company/plan.html
+++ b/company/templates/company/plan.html
@@ -310,7 +310,7 @@ th{
                                             </p>
                                             <p class="c-field">
                                               Members per group<br>
-                                              <span>{{object.group_size}} members</span>
+                                              <span>Unlimited members</span>
                                             </p>
 
                                             <form action="#" method="POST" class="plan-form">
