company plan updates

--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -221,12 +221,12 @@ th{
                     {% endfor %}
                 </tr>
 
-                <tr>
-                  <th scope="row" style="text-align: left;">No of Coderoom</th>
-                {% for item in no_of_coderoom %}
-                  <td>Max {{ item }}</td>
-                    {% endfor %}
-                </tr>
+{#                <tr>#}
+{#                  <th scope="row" style="text-align: left;">No of Coderoom</th>#}
+{#                {% for item in no_of_coderoom %}#}
+{#                  <td>Max {{ item }}</td>#}
+{#                    {% endfor %}#}
+{#                </tr>#}
                 <tr>
                   <th scope="row" style="text-align: left;">Max Storage Memory</th>
                      {% for item in max_storage %}
