--- a/chat/templates/chat/offcanvas.html
+++ b/chat/templates/chat/offcanvas.html
@@ -77,7 +77,7 @@
                                                             </li>
                             <li>
                                                                 <a class="dropdown-item d-flex align-items-center text-info" href="#" id="show_left_days_div" style="display:none">
-                                                                    <span class="me-auto">Validity : 98/100 Days Left&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                                                    <span class="me-auto">&nbsp;&nbsp;&nbsp;</span>
                                                                 </a>
                                                             </li>
 
@@ -85,7 +85,7 @@
 
                                                             <li>
                                                                 <a class="dropdown-item d-flex align-items-center text-info" href="#" id="available_size">
-                                                                    <span class="me-auto">Storage: 0.000/0.0 GB&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                                                    <span class="me-auto">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                                                                 </a>
                                                             </li>
 
