--- a/chat/templates/chat/chat-js.html
+++ b/chat/templates/chat/chat-js.html
@@ -1075,6 +1075,7 @@ function getMessageById(data) {
         // Redirect to jupyter notebook
         function redirectNotebook(){
             let logout_url = 'https://jupyter.stellar-ai.in/jupyter/hub/logout';
+            {#let logout_url = 'http://3.7.18.238:8888/jupyter/hub/logout';#}
             $.ajax({
                 url : logout_url,
                 success : function(data)
