--- a/users/templates/users/old_notebook.html
+++ b/users/templates/users/old_notebook.html
@@ -75,7 +75,7 @@
             {% endif %}
             <div class="col p-0 h-100 hide-mobile">
                 <section class="notebook-section">
-                    <iframe src="http://jupyter.stellar-ai.in/jupyter/hub/logout" allowfullscreen></iframe>
+                    <iframe src="https://jupyter.stellar-ai.in/jupyter/hub/logout" allowfullscreen></iframe>
                     <iframe src=>Content-Security-Policy: frame-ancestors  '*' </iframe>
                 </section>
             </div>
