--- a/post/templates/post/feeds.html
+++ b/post/templates/post/feeds.html
@@ -471,7 +471,7 @@
                         flex-basis: 45%;
                     }
                     [id^='cat-panel'].is-active a{
-                        background-color: #5596E6 !important;
+                        background-color: #74226c !important;
                         color: white !important;
                     }
                 </style>
