--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -14,7 +14,7 @@
                 <div class="hero-body">
                     <div class="container">
                         <div class="left-caption" style="max-width: 470px;">
-                            <h2 style="text-transform: uppercase;">Join an Exciting Soc<span style="color: #FFE162">AI</span>l Experience.</h2>
+                            <h2 style="text-transform: uppercase;">Join an Exciting Soc<span style="color: #74226c">AI</span>l Experience.</h2>
                         </div>
                     </div>
                 </div>
