--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -19,7 +19,7 @@
 }
 
 .pricing-table .block-heading h2 {
-  color: #5596E6;
+  color: #4B2142;
 }
 
 .pricing-table .block-heading p {
@@ -37,7 +37,7 @@
 
 .pricing-table .item {
   background-color: #ffffff;
-  border-top: 4px solid #5596E6;
+  border-top: 4px solid #4B2142;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
   padding: 30px;
   overflow: hidden;
@@ -100,7 +100,7 @@
   margin: 15px 0;
   font-size: 45px;
   text-align: center;
-  color: #5596E6; 
+  color: #4B2142; 
 }
 
 .pricing-table .buy-now button {
@@ -123,10 +123,10 @@
     font-size: .8rem;
     padding: 5px 10px;
     border-radius: 10rem;
-    color: yellow;
-    background-color: #5596E6;
+    color: white;
+    background-color: #4B2142;
     text-transform: uppercase;
-    yellow-space: nowrap;
+    white-space: nowrap;
 }
 .original-price{
     transform: translateY(-5px);
@@ -138,11 +138,11 @@
     overflow: hidden;
 }
 .item:hover .c-button {
-    border: 1px solid #5596E6;
+    border: 1px solid #4B2142;
 }
 .c-button:hover{
-    background-color: #5596E6;
-    color: yellow;
+    background-color: #4B2142;
+    color: white;
 }
 .c-button::before{
     content: '';
@@ -184,7 +184,7 @@
 
 td{
   padding: 1em;
-  background: #103783;
+  background: #4B2142;
   color: #fff;
 }
 
@@ -198,7 +198,7 @@ th{
 }
 </style>
 <section class="pricing-table">
-    <div class="container bg-yellow">
+    <div class="container bg-white">
 
         <center>
             <h6 style="color:#000;font-size:1.7em;"> Plans & Features</h6>
@@ -210,7 +210,7 @@ th{
                 <tr>
                   <th scope="col" style="width: 30%;"></th>
                   {% for item in titles %}
-                    <th scope="col" style="background: #103783;color: #fff;width: 17.5%;">{{ item }}</th>
+                    <th scope="col" style="background: #4B2142;color: #fff;width: 17.5%;">{{ item }}</th>
                   {% endfor %}
                 </tr>
 
