--- a/home/templates/home/social_base.html
+++ b/home/templates/home/social_base.html
@@ -44,7 +44,7 @@
             </div>
             <style>
                 .custom-icon.c-active{
-                    background: #6ba4e9;
+                    background: #74226c;
                     color: #fafafa !important;
                     box-shadow: 0 14px 26px -12px rgb(85 150 230 / 42%), 0 4px 23px 0px rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(85 150 230 / 20%) !important;
                 }
