--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -189,7 +189,7 @@
 
 
     <div class="social">
-  <a href="#">
+  <a href="{% url 'home:workspace' %}">
     <div class="social-btn color-telegram">
       <div class="icons8-telegram-app"></div>
       <p class="order-1 google-font margin-telgram">Connabo Biz</p>
