--- a/home/templates/home/temp.html
+++ b/home/templates/home/temp.html
@@ -12,6 +12,9 @@
     .feature_heading{
         padding: 3em 3em 0em 50%;
     }
+    .code_connect {
+        font-size: 2rem;
+    }
 #myheader {
       color: #4B2142;
       font-family: 'Quicksand';
@@ -51,7 +54,7 @@
 }
 
     .code_connect {
-        font-size: 1.6rem;
+        font-size: 1rem;
     }
 
     #myheader {
